# gdsr

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-test.txt  test.py
.devcontainer/: Dockerfile.macos  Dockerfile.windows  devcontainer.json
.devcontainer/linux/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: CI.yml  build-test.yml  gh-pages.yml  lint-python.yml  publish-docs.yml  publish-package.yml  test-lint-format.yml  test-python.yml
development/: index.html
development/contributing/: index.html
development/contributing/code-style/: index.html
development/contributing/git-standards/: index.html
development/contributing/ide-configuration/: index.html
docs/: conf.py  index.md  index.rst
docs/development/: class_diagrams.md
docs/development/contributing/: git-standards.md  ide-configuration.md
docs/python-api/: boolean_tools.md  cell.md  index.md  library.md  point.md  typing.md  typings.md
docs/python-api/elements/: array_reference.md  box.md  cell_reference.md  element_reference.md  index.md  node.md  path.md  polygon.md  reference.md  text.md
docs/python-api/typing/: input_points_like.md  point_like.md
docs/python-api/typings/: input_points_like.md  point_like.md
docs/styles/: extra.css
gdsr/: __init__.py  _gdsr.pyi  dependencies.py  gdsr.pyi
gdsr/gdsr/: __init__.py
gdsr/logging/: __init__.py  setup.py
gdsr/path/: __init__.pyi
gdsr/polygon/: __init__.pyi
gdsr/typing/: __init__.py
gdsr/typings/: __init__.py
python-api/: index.html
python-api/cell/: index.html
python-api/elements/path/: index.html
python-api/elements/polygon/: index.html
python-api/elements/reference/: index.html
python-api/elements/text/: index.html
python-api/point/: index.html
python-api/typings/: index.html
python/gdsr/: gdsr.pyi
search/: search_index.json
src/: lib.rs
src/array_reference/: general.rs  mod.rs
src/boolean/: mod.rs  utils.rs
src/box/: general.rs  mod.rs
src/cell/: general.rs  io.rs  mod.rs
src/cell_reference/: general.rs  io.rs  mod.rs
src/config/: gds_file_types.rs  mod.rs
src/element/: mod.rs
src/element_reference/: general.rs  io.rs  mod.rs
src/grid/: general.rs  mod.rs
src/node/: general.rs  mod.rs
src/path/: general.rs  io.rs  mod.rs
src/path/path_type/: mod.rs
src/point/: general.rs  iterator.rs  mod.rs  utils.rs
src/polygon/: general.rs  io.rs  mod.rs  utils.rs
src/reference/: general.rs  io.rs  mod.rs
src/reference/instance/: mod.rs
src/text/: general.rs  io.rs  mod.rs  utils.rs
src/text/presentation/: mod.rs
src/traits/: mod.rs
src/utils/: gds_format.rs  general.rs  geometry.rs  io.rs  mod.rs  points.rs  transformations.rs
src/validation/input/: mod.rs
tests/: conftest.py  test_boolean.py  test_cell.py  test_element_reference.py  test_grid.py  test_library.py  test_path.py  test_point.py  test_polygon.py  test_reference.py  test_text.py  test_typings.py
user-guide/getting-started/: index.html
user-guide/installation/: index.html
