[package]
name = "gdsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gdsr"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.16.1"
byteorder = "1.5.0"
chrono = "0.4.38"
inventory = "0.3.15"
log = "0.4.22"
plotly = "0.9.0"
pyo3 = { version = "0.22.2", features = ["extension-module", "multiple-pymethods"] }
pyo3-log = "0.11.0"
tempfile = "3.10.1"
