[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "gdsr"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: PyPy",

]
keywords = ["gdsr", "rust", "python", "pyo3", "GDSII", "CAD"]
dynamic = ["version"]
license = {file = "LICENSE"}
dependencies = [
    "typing_extensions; python_version < '3.11'"
]
readme = "README.md"
authors = [
    {name = "Matthew Mckee", email = "matthewmckee04@yahoo.co.uk"}
]

[project.urls]
Documentation = "https://MatthewMckee4.github.io/gdsr/"
Repository = "https://github.com/MatthewMckee4/gdsr"
Issues = "https://github.com/MatthewMckee4/gdsr/issues"


[tool.maturin]
module-name = "gdsr._gdsr"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
include = ["*.py", "*.pyi"]

line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "I", "N", "D", "UP", "RUF", "PERF", "ERA", "PTH"]
ignore = ["D203", "D213"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

per-file-ignores = {"*/__init__.py" = ["F401", "F403" ,"E402"], "**/*.pyi" = ["D418"], "tests/*.py" = ["D"], "**/*.py" = ["D100"]}

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true